package Ex_8_3;

public class Conserva extends Produto {

    public Conserva(String nome, double peso) {
        super(nome, peso);
    }

    @Override
    public void draw() {
        System.out.println(indent.toString() + " Conserva '" + this.getName() + "' " + "- Weight : " + this.getWeight() + " ");
    }
}
